#2 changed to run test script

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -25,8 +25,9 @@ jobs:
         working-directory: test
         run: rm -rf results 
 
-      - name: Run test.py
-        run: python test/test.py
+      - name: Run test.sh
+        working-directory:  test
+        run: bash test.sh
 
       - name: Compare CSV files
         run: python test/compare_csv.py
