--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.9.12'  
 
       - name: Install dependencies
-        run: pip install polars numpy pandas openpyxl
+        run: pip install polars numpy pandas openpyxl pyarrow
 
       - name: Remove previous tests
         working-directory: test
