--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==2.2.4
 openpyxl==3.1.5
 pandas==2.2.3
 polars==1.25.2
+pyarrow==19.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 six==1.17.0
