--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+black==25.1.0
+click==8.1.8
 et_xmlfile==2.0.0
+mypy_extensions==1.1.0
 numpy==2.2.4
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.7
 polars==1.25.2
 pyarrow==19.0.1
 python-dateutil==2.9.0.post0
