--- a/.github/workflows/static-github-pages.yml
+++ b/.github/workflows/static-github-pages.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: 'lambda' # <-- Explicitly checkout the lambda branch
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
