Change deployment branch from lambda to main

--- a/.github/workflows/static-github-pages.yml
+++ b/.github/workflows/static-github-pages.yml
@@ -2,9 +2,9 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the lambda branch
+  # Runs on pushes targeting the main branch
   push:
-    branches: ["lambda"]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: 'lambda' 
+          ref: 'main' 
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
